# taiwan-stock-weekly

./: .firebaserc  .gitignore  README.md  add_stock.py  config.json  deploy.py  firebase.json  firestore.rules  gha_deploy.py  main.py  pyproject.toml  report_generator.py  server.py  start_server.bat  stock_analyzer.py
.github/workflows/: deploy.yml  weekly-report.yml
docs/: index.html
functions/: main.py  news_fetcher.py  report_generator.py  requirements.txt  stock_analyzer.py
output/: index.html
public/: index.html
