[project]
name = "taiwan-stock-weekly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "flask>=3.0.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "yfinance>=1.2.2",
]
